Source/WebCore/animation/DocumentTimeline.h
@@ -27,13 +27,8 @@
 
 #include "AnimationTimeline.h"
 #include "GenericTaskQueue.h"
-#include "PlatformScreen.h"
 #include "Timer.h"
 #include <wtf/Ref.h>
-
-#if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
-#include "DisplayRefreshMonitorClient.h"
-#endif
 
 namespace WebCore {
 
@@ -41,12 +36,9 @@ class AnimationPlaybackEvent;
 class RenderElement;
 
 class DocumentTimeline final : public AnimationTimeline
-#if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
-    , public DisplayRefreshMonitorClient
-#endif
 {
 public:
-    static Ref<DocumentTimeline> create(Document&, PlatformDisplayID);
+    static Ref<DocumentTimeline> create(Document&);
     ~DocumentTimeline();
 
     Document* document() const { return m_document.get(); }
@@ -55,7 +47,6 @@ public:
     void pause() override;
 
     void timingModelDidChange() override;
-    void windowScreenDidChange(PlatformDisplayID);
 
     // If possible, compute the visual extent of any transform animation on the given renderer
     // using the given rect, returning the result in the rect. Return false if there is some
@@ -71,6 +62,10 @@ public:
 
     void enqueueAnimationPlaybackEvent(AnimationPlaybackEvent&);
 
+#if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
+    void documentAnimationSchedulerDidFire();
+#endif
+
     void updateThrottlingState();
     WEBCORE_EXPORT Seconds animationInterval() const;
     WEBCORE_EXPORT void suspendAnimations();
@@ -79,7 +74,7 @@ public:
     WEBCORE_EXPORT unsigned numberOfActiveAnimationsForTesting() const;
 
 private:
-    DocumentTimeline(Document&, PlatformDisplayID);
+    DocumentTimeline(Document&);
 
     void scheduleInvalidationTaskIfNeeded();
     void performInvalidationTask();
@@ -100,11 +95,7 @@ private:
     HashSet<RefPtr<WebAnimation>> m_acceleratedAnimationsPendingRunningStateChange;
     Vector<Ref<AnimationPlaybackEvent>> m_pendingAnimationEvents;
 
-#if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
-    // Override for DisplayRefreshMonitorClient
-    void displayRefreshFired() override;
-    RefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const override;
-#else
+#if !USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
     void animationResolutionTimerFired();
     Timer m_animationResolutionTimer;
 #endif
